--- a/shah/translations/es_ES.json
+++ b/shah/translations/es_ES.json
@@ -114,7 +114,7 @@
   "FajrL": "Verify your Telegram Profile",
   "2peucP": "Crear un listado",
   "2QerxF": "Comprar un listado",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Campaña de enero de 2019",
     "growth.jan2019.short_name": "Ene 2019",
     "growth.feb2019.name": "Campaña de febrero de 2019",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "June 2019",
     "growth.july2019.name": "July 2019 Campaign",
     "growth.july2019.short_name": "July 2019",
+    "growth.aug2019.name": "August 2019 Campaign",
+    "growth.aug2019.short_name": "August 2019",
+    "growth.sep2019.name": "September 2019 Campaign",
+    "growth.sep2019.short_name": "September 2019",
     "growth.profile.and.email.requirement": "Correo electrónico verificado y perfil de origen",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Origin's Global Community",
     "growth.twitterShare.content5.details": "Origin has a global presence, with tens of thousands community members supporting our vision. Join our Telegram (ENG) today.",
     "growth.twitterShare.content5.link": "Read the article",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Watch the video",
+    "growth.share.content7.title": "New Ways to Earn OGN in September",
+    "growth.share.content7.details": "Join Origin Rewards and become a token holder alongside thousands of users around the world.",
+    "growth.share.content7.link": "Read the article",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Read the article",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Read the article",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Read the article"
   },
   "2hr27C": "Vender un listado",
   "3H6hnZ": "Share this on Twitter",
@@ -396,6 +415,14 @@
   "3TJ9jH": "Criptomonedas Aceptadas",
   "ovgii": "Maker Dai es bueno para listados a largo plazo como alquileres o ventas de propiedades.",
   "3JTZtf": "El éter es bueno para los listados a corto plazo.",
+  "4oiJGX": "Enable Encryption",
+  "2ccL5r": "Shipping addresses will be securely encrypted and visible only to you and your buyers. To make this possible, {walletType} will ask you to enable Origin Messaging.",
+  "2CPasx": "Cargando...",
+  "3Fn66p": "Got it",
+  "3LeIbr": "Require Shipping Address",
+  "LPDmw": "Will you need the buyer's shipping address to fulfill the order?",
+  "TcZpT": "Yes",
+  "1KdKNg": "No",
   "3qpp29": "Atrás",
   "2fdHS3": "Vamos a actualizar su listado",
   "1cFo8": "Create a Listing",
@@ -404,15 +431,14 @@
   "tjihf": "Añadir una lista",
   "2yP9GH": "Add Photos",
   "sRk1G": "Listings with photos will get 5x more exposure in Origin Marketplace",
-  "2yxuOO": "{=Maximum 10 images per listing.}{=First image will be featured.}{=Recommended aspect ratio is 4:3}",
-  "IGoi0": "Maximum 10 images per listing.",
-  "3KLh15": "First image will be featured.",
-  "zZpNb": "Recommended aspect ratio is 4:3",
-  "39Sn4G": "{=Hold down 'command' (⌘) to select multiple images.}{=Maximum 10 images per listing.}{=First image will be featured - drag and drop images to reorder.}{=Recommended aspect ratio is 4:3}",
-  "lLyEP": "Mantenga presionado 'comando' (⌘) para seleccionar varias imágenes.",
-  "3KS9zH": "Máximo 10 imágenes por listado.",
-  "3IYlRb": "Se mostrará la primera imagen: arrastre y suelte las imágenes para reordenarlas.",
-  "1m5qrF": "La relación de aspecto recomendada es 4: 3",
+  "38v8Q": "{=First image will be featured}{=Recommended aspect ratio is 4:3}",
+  "4z8e4E": "First image will be featured",
+  "2AdhQu": "Recommended aspect ratio is 4:3",
+  "MEkMJ": "{=Hold down 'command' (⌘) to select multiple images}{=First image will be featured}{=Drag and drop to reorder}{=Recommended aspect ratio is 4:3}",
+  "3TcVU5": "Hold down 'command' (⌘) to select multiple images",
+  "S1k3T": "First image will be featured",
+  "12rgQA": "Drag and drop to reorder",
+  "3nl2LU": "Recommended aspect ratio is 4:3",
   "uOODR": "Continuar",
   "32PIQp": "{=Add Listing Details} Asegúrese de darle a su listado un título y una descripción apropiados para que otros sepan lo que está ofreciendo. Agregar algunas fotos aumentará las posibilidades de vender su anuncio.",
   "3edqPr": "Añadir detalles del listado",
@@ -426,7 +452,7 @@
   "2zNhcv": "sábado",
   "3ZIa6N": "Availability",
   "4nV9ke": "Por favor arregla los errores de abajo...",
-  "3LuFry": "Haga clic en el calendario para ingresar información de precios y disponibilidad. Para seleccionar múltiples intervalos de tiempo, haga clic en el intervalo de tiempo de inicio y arrastre hasta el final.",
+  "jxSnv": "Click the calendar to enter pricing and availability information. To select multiple time slots, click the start and then click the end.",
   "2jTokN": "Fecha de inicio",
   "3Kyim6": "Fecha final",
   "4oSoL3": "Disponible",
@@ -446,6 +472,7 @@
   "3JSSeu": "Se requiere zona horaria",
   "3q86pi": "La zona horaria es demasiado larga",
   "3DRLN5": "Zona horaria",
+  "1Q7JQv": "Click the calendar to enter pricing and availability information. To select multiple days, click the start and then click the end.",
   "46VzsL": "Sí",
   "24izZl": "No",
   "1BpZMF": "Default Weekday Pricing {=(Sunday - Thursday nights)}",
@@ -520,14 +547,14 @@
   "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
   "1DYydy": "Approve OGN",
   "1ZMsNQ": "¡Éxito!",
-  "2DVeBg": "Origin ahora puede mover DAI en su nombre.",
+  "1AhTJM": "Origin may now move OGN on your behalf.",
   "D0geX": "Price",
   "4lguwU": "Price Per Unit",
   "3ZmGA3": "Enter amount",
   "4veauv": "Price is an approximation of what you will receive.",
   "YOrHj": "Learn More",
-  "3yMQ1Q": "Cantidad",
   "Seiit": "Quantity is required",
+  "3yMQ1Q": "Cantidad",
   "1y1wd7": "Review",
   "1IkXVw": "Review your listing and click Publish to make it available on Origin",
   "3opilH": "Publish",
@@ -674,7 +701,6 @@
   "47VMoo": "Vaya al sitio web de Airbnb, edite su perfil y pegue el siguiente texto en la descripción del perfil:",
   "aHvny": "Copy",
   "4ppTCb": "Continúe luego de introducido el código de confirmación en su perfil de Airbnb.",
-  "2CPasx": "Cargando...",
   "r8uEJ": "Enter a valid email address",
   "2v9K0Q": "What’s your email address?",
   "3MWhEl": "Verifique su dirección de correo electrónico",
@@ -745,6 +771,8 @@
   "2jI1fH": "Registrarse",
   "2dFweL": "Fin",
   "7piHc": "Revisa",
+  "2Vumnj": "A newer version of this listing has been published",
+  "28LlnA": "View Current Listing",
   "2nApoY": "Commission",
   "2QlAhE": "Commission per Unit",
   "1Lcd02": "Total Budget",
@@ -778,13 +806,24 @@
   "1voSMo": "Get more exposure and sell faster.",
   "4u4ITL": "Promote Now",
   "1uOQBZ": "How to get OGN",
+  "3lv0CZ": "Item",
+  "1LPH0L": "Quantity",
+  "VflZn": "Check In",
+  "3vWMrZ": "Check Out",
+  "7Rxil": "Shipping Address",
+  "Lr2Bk": "Total Price",
+  "198mwu": "Payment",
   "IlnwX": "Cantidad",
+  "4zMr8t": "Confirm Purchase",
+  "1ykizg": "Please confirm your purchase",
+  "2EM2dq": "Confirm Purchase",
+  "3ODHrz": "Back",
   "1usuUr": "Zona horaria:",
   "4xvjOX": "NOTA: Esto es diferente de tu zona horaria de {userTimeZone}",
   "NF15": "Clear",
   "dyal9": "Listado no encontrado",
+  "1qiDQm": "Listing Invalid",
   "ZOcTF": "Listado {id}",
-  "1ucotJ": "Listado inválido",
   "1JLB9": "Other listings by this seller",
   "OTShT": "Product Description",
   "4xrZ3E": "About the seller",
@@ -795,19 +834,25 @@
   "4gGbfA": "Aprobar",
   "48zmKx": "Usted ha hecho una oferta en este listado. Su oferta será visible dentro de unos segundos. Su pago ETH ha sido transferido a un contrato de fideicomiso.",
   "1uk7Ue": "Ver detalles de compra",
+  "2DVeBg": "Origin ahora puede mover DAI en su nombre.",
+  "4BL08O": "This field is required",
+  "3QQq80": "Shipping Address",
+  "269nk8": "Shipping Address",
+  "7UcoB": "Let the seller know where to send your item.",
+  "XcWvt": "There were some errors with your shipping address. Please fix them to continue.",
+  "3HYSoI": "Name",
+  "2CIS3U": "Street Address 1",
+  "2uzBXp": "Street Address 2",
+  "7CpuL": "City",
+  "tWWSq": "State/Province/Region",
+  "1kOB7p": "Zip/Postal Code",
+  "26AfdE": "Country",
+  "B8swo": "Other",
   "3ha47N": "Your listing here",
   "37CGq4": "Earn {=Origin Tokens}",
   "2uLTWt": "Origin Tokens",
   "3xBWhk": "From the Origin Team",
   "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Nota: búsqueda no disponible",
-  "zHCdD": "Categories",
-  "qNN0R": "Rewards",
-  "w9VwW": "Apparel",
-  "3KBUPq": "Gift Cards",
-  "1n8Uhq": "Housing",
-  "13f5tg": "Services",
-  "3duCHQ": "Art",
   "1tebgy": {
     "*": "{number} Listados",
     "_1": "1 Listado"
@@ -820,12 +865,21 @@
     "*": "{number} results",
     "_1": "1 result"
   },
-  "39Up0B": "Listados",
   "62EcI": "No se han encontrado resultados de búsqueda.",
   "49IFWc": "Tu mercado todavía no tiene listados",
   "2Vj5Zk": "¡Puede crear listados usted mismo o invitar a vendedores a unirse a su plataforma!",
   "2Qfyq": "Crear un listado",
   "4u7nzi": "No se encontraron listados",
+  "4F16NR": "Search",
+  "JcV8m": "Nota: búsqueda no disponible",
+  "zHCdD": "Categories",
+  "qNN0R": "Rewards",
+  "w9VwW": "Apparel",
+  "3KBUPq": "Gift Cards",
+  "1n8Uhq": "Housing",
+  "13f5tg": "Services",
+  "3duCHQ": "Art",
+  "39Up0B": "Listados",
   "4v3q78": "Carga más",
   "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
@@ -878,7 +932,6 @@
   "4hyWlA": "Create a Listing",
   "30cTSB": "Settings",
   "26gf1A": "Edit Listing",
-  "3ODHrz": "Back",
   "dztC6": "Compras",
   "3ypwUq": "Listados",
   "2SCFyd": "Ventas",
@@ -929,7 +982,7 @@
   "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
   "t06nL": "Mensajería de origen",
   "4aVWeW": "Sincronización de mensajes de origen",
-  "mmY61": "0 de 2 mensajes de MetaMask firmados",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "La mensajería te permitirá chatear con otros compradores y vendedores.",
   "1h9kqx": "Esperando a que firmes el mensaje número {messageNumber}",
   "tZGri": "{messageNumber} de 2 mensajes de MetaMask firmados",
@@ -938,8 +991,10 @@
   "34wViE": "2 de 2 mensajes de MetaMask firmados",
   "2xVe7N": "¡Felicidades! Ahora puede enviar mensajes a otros usuarios en Origin y mantenerse al día con todas sus compras y ventas.",
   "3xbKVN": "Ya ha terminado y puede continuar presionando el botón de abajo.",
+  "2MbPUC": "Continue",
   "1bjxG": "Error",
   "B3XI5": "No web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Habilitar mensajería",
   "42zV7P": "Instalar MetaMask",
   "1AkpVQ": "Instalando MetaMask ...",
@@ -958,7 +1013,6 @@
   "4zQwsK": "Add name & photo",
   "2bKSKR": "Sign to Publish",
   "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
-  "3Fn66p": "Got it",
   "3ukQa5": "Are you sure you don’t want Origin Rewards?",
   "2dbJQ2": "You will not be able to earn OGN on Origin, but you can still verify your profile.",
   "BfHYB": "I'm sure",
@@ -990,14 +1044,11 @@
   "1kXVpx": "Amount you’re willing to spend for all units sold",
   "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
   "1lrIeH": "How does it work?",
-  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
-  "2DUOxZ": "commission",
-  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
-  "41dR5i": "more exposure",
+  "hBFZk": "You can promote your listing with Origin Tokens (OGN) to get higher placement and more exposure on the Origin app and broader network.",
+  "M7K6x": "Your OGN deposit acts as a commission that will be deducted every time a sale is made. Think of this as advertising to attract more buyers to your listing.",
   "3vDb1N": "Success!",
-  "3NGsUC": "You've successfully promoted your listing.",
+  "3cZFwT": "You've successfully promoted your listing. This gives your listing higher visibility than others on the Origin app and broader network.",
   "3QQbmb": "Listing Exposure",
-  "3UjbU1": "Notificaciones de escritorio habilitadas ✅",
   "gLVF0": "Ajustes",
   "1lZQR5": "Ajustes",
   "m1nCP": "Idioma",
@@ -1012,10 +1063,12 @@
   "23S1SF": "Servidor de descubrimiento",
   "1gSlTw": "Growth Server",
   "nqaAu": "Relayer Server",
-  "2OjTbq": "Enable Proxy Accounts",
-  "1KAkeW": "Warning: enable at your own risk!",
-  "2JuXjF": "Relayer Enabled",
-  "3GHfag": "Promote Listings enabled",
+  "1kwp9A": "GraphQL Server",
+  "28zT3p": "Performance Mode",
+  "Dg7k9": "Proxy Accounts",
+  "1o6gS2": "Relayer",
+  "3T1Coy": "Onboarding Disabled",
+  "ZegcV": "Restore Defaults",
   "pT9j": "Retenida",
   "NrhOS": "Liberar",
   "QUO1v": "Cantidad",
@@ -1034,15 +1087,13 @@
   "1mXtoj": "Release Funds",
   "ECVtv": "Report a Problem",
   "4mvSGz": "Congratulations!",
-  "KSCnL": "Your offer has been accepted by the seller.",
-  "3hNuzg": "{=Contact the Seller} with your shipping address or any questions.",
-  "17VPpk": "Contact the Seller",
+  "41OIow": "Seller has accepted your offer.",
   "4vbIw5": "Click below to confirm your receipt of {listingTitle} when you get it.",
   "29FBui": "{=Contact Seller} with any questions about your rental.",
   "2TlwP9": "Contact Seller",
   "Ra9eC": "Click below to confirm that your rental has been completed.",
   "1XNHon": "Click below to confirm that this service has been completed.",
-  "3fRaJs": "Confirm",
+  "1bb2m": "Confirm receipt",
   "2MmmYr": "Having issues?",
   "3hC1K6": "You've accepted this offer.",
   "4AMmgs": "Make sure to fulfill the order promptly. Message the buyer if there is any information that you need.",
@@ -1095,6 +1146,13 @@
   "innnj": "Describe your experience transacting with this buyer.",
   "1XTye3": "Write a review here",
   "2inPPl": "Submit",
+  "sZqLZ": "Enable messaging to decrypt shipping address",
+  "1cFQt5": "Could not decrypt shipping address",
+  "4aA4kx": "Name:",
+  "BQC7A": "Street Address:",
+  "3GDRNE": "City/State/Region",
+  "1W8RIH": "Country",
+  "2vag2E": "Other",
   "2QEWsR": "¿Hay algún problema?",
   "436v4u": "¿Estás seguro de que quieres reportar un problema? Esto iniciará el proceso de resolución de conflictos. Se notificará a alguien de Origin y su historial de chat se hará público a un árbitro.",
   "3N5hJ3": "Ups, un momento...",
@@ -1113,8 +1171,6 @@
   "3zjcdg": "Cancel Purchase",
   "3oTKqy": "Cancel Purchase",
   "4CzqB6": "Are you sure you want to cancel your purchase? Your escrowed payment wil be returned to your wallet.",
-  "1KdKNg": "No",
-  "TcZpT": "Yes",
   "43fCua": "Oferta {id}",
   "39UKcu": "No hay contrato de mercado?",
   "4rsxzO": "Historial de Transacciones",
