--- a/shah/translations/fr_FR.json
+++ b/shah/translations/fr_FR.json
@@ -114,7 +114,7 @@
   "FajrL": "Verify your Telegram Profile",
   "2peucP": "Créer une annonce",
   "2QerxF": "Achat d'une annonce",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Campagne de janvier 2019",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Campagne de février 2019",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "June 2019",
     "growth.july2019.name": "July 2019 Campaign",
     "growth.july2019.short_name": "July 2019",
+    "growth.aug2019.name": "August 2019 Campaign",
+    "growth.aug2019.short_name": "August 2019",
+    "growth.sep2019.name": "September 2019 Campaign",
+    "growth.sep2019.short_name": "September 2019",
     "growth.profile.and.email.requirement": "Email vérifié et profile sur Origin",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Origin's Global Community",
     "growth.twitterShare.content5.details": "Origin has a global presence, with tens of thousands community members supporting our vision. Join our Telegram (ENG) today.",
     "growth.twitterShare.content5.link": "Read the article",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Watch the video",
+    "growth.share.content7.title": "New Ways to Earn OGN in September",
+    "growth.share.content7.details": "Join Origin Rewards and become a token holder alongside thousands of users around the world.",
+    "growth.share.content7.link": "Read the article",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Read the article",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Read the article",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Read the article"
   },
   "2hr27C": "Vendre une annonce",
   "3H6hnZ": "Share this on Twitter",
@@ -396,6 +415,14 @@
   "3TJ9jH": "Accepted Cryptocurrencies",
   "ovgii": "Maker Dai is good for long term listings like rentals or property sales.",
   "3JTZtf": "Ether is good for short term listings.",
+  "4oiJGX": "Enable Encryption",
+  "2ccL5r": "Shipping addresses will be securely encrypted and visible only to you and your buyers. To make this possible, {walletType} will ask you to enable Origin Messaging.",
+  "2CPasx": "Chargement...",
+  "3Fn66p": "Got it",
+  "3LeIbr": "Require Shipping Address",
+  "LPDmw": "Will you need the buyer's shipping address to fulfill the order?",
+  "TcZpT": "Yes",
+  "1KdKNg": "No",
   "3qpp29": "Retour",
   "2fdHS3": "Mettons à jour votre fiche",
   "1cFo8": "Create a Listing",
@@ -404,15 +431,14 @@
   "tjihf": "Ajouter une annonce",
   "2yP9GH": "Add Photos",
   "sRk1G": "Listings with photos will get 5x more exposure in Origin Marketplace",
-  "2yxuOO": "{=Maximum 10 images per listing.}{=First image will be featured.}{=Recommended aspect ratio is 4:3}",
-  "IGoi0": "Maximum 10 images per listing.",
-  "3KLh15": "First image will be featured.",
-  "zZpNb": "Recommended aspect ratio is 4:3",
-  "39Sn4G": "{=Hold down 'command' (⌘) to select multiple images.}{=Maximum 10 images per listing.}{=First image will be featured - drag and drop images to reorder.}{=Recommended aspect ratio is 4:3}",
-  "lLyEP": "Maintenez la touche 'Commande' (⌘) enfoncée pour sélectionner plusieurs images.",
-  "3KS9zH": "Maximum 10 images par annonce.",
-  "3IYlRb": "La première image sera en vedette- glissez et déposez les images pour les réorganiser.",
-  "1m5qrF": "Le format recommandé est 4: 3",
+  "38v8Q": "{=First image will be featured}{=Recommended aspect ratio is 4:3}",
+  "4z8e4E": "First image will be featured",
+  "2AdhQu": "Recommended aspect ratio is 4:3",
+  "MEkMJ": "{=Hold down 'command' (⌘) to select multiple images}{=First image will be featured}{=Drag and drop to reorder}{=Recommended aspect ratio is 4:3}",
+  "3TcVU5": "Hold down 'command' (⌘) to select multiple images",
+  "S1k3T": "First image will be featured",
+  "12rgQA": "Drag and drop to reorder",
+  "3nl2LU": "Recommended aspect ratio is 4:3",
   "uOODR": "Continuer",
   "32PIQp": "{=Add Listing Details} Assurez-vous de donner à votre annonce un titre et une description appropriés pour que les autres sachent ce que vous proposez. Ajouter des photos augmentera les chances de vendre votre annonce.",
   "3edqPr": "Ajouter les détails de l'annonce",
@@ -426,7 +452,7 @@
   "2zNhcv": "Samedi",
   "3ZIa6N": "Availability",
   "4nV9ke": "Veuillez corriger les erreurs ci-dessous ...",
-  "3LuFry": "Cliquez sur le calendrier pour saisir les informations de prix et de disponibilité. Pour sélectionner plusieurs créneaux horaires, cliquez sur le créneau de départ et faites-le glisser jusqu'au dernier.",
+  "jxSnv": "Click the calendar to enter pricing and availability information. To select multiple time slots, click the start and then click the end.",
   "2jTokN": "Date de début",
   "3Kyim6": "Date de fin",
   "4oSoL3": "Disponible",
@@ -446,6 +472,7 @@
   "3JSSeu": "Le fuseau horaire est requis",
   "3q86pi": "Le fuseau horaire est trop long",
   "3DRLN5": "Fuseau horaire",
+  "1Q7JQv": "Click the calendar to enter pricing and availability information. To select multiple days, click the start and then click the end.",
   "46VzsL": "Oui",
   "24izZl": "Non",
   "1BpZMF": "Default Weekday Pricing {=(Sunday - Thursday nights)}",
@@ -520,14 +547,14 @@
   "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
   "1DYydy": "Approve OGN",
   "1ZMsNQ": "Success!",
-  "2DVeBg": "Origin may now move DAI on your behalf.",
+  "1AhTJM": "Origin may now move OGN on your behalf.",
   "D0geX": "Price",
   "4lguwU": "Price Per Unit",
   "3ZmGA3": "Enter amount",
   "4veauv": "Price is an approximation of what you will receive.",
   "YOrHj": "Learn More",
-  "3yMQ1Q": "Quantité",
   "Seiit": "Quantity is required",
+  "3yMQ1Q": "Quantité",
   "1y1wd7": "Review",
   "1IkXVw": "Review your listing and click Publish to make it available on Origin",
   "3opilH": "Publish",
@@ -674,7 +701,6 @@
   "47VMoo": "Allez au site Airbnb, modifier votre profil et collez le texte suivant dans sa description du profil:",
   "aHvny": "Copy",
   "4ppTCb": "Continuer après avoir entré le code de confirmation dans votre profil d’Airbnb.",
-  "2CPasx": "Chargement...",
   "r8uEJ": "Enter a valid email address",
   "2v9K0Q": "What’s your email address?",
   "3MWhEl": "Vérifiez votre adresse e-mail",
@@ -745,6 +771,8 @@
   "2jI1fH": "Enregistrement",
   "2dFweL": "Fin",
   "7piHc": "Check-out",
+  "2Vumnj": "A newer version of this listing has been published",
+  "28LlnA": "View Current Listing",
   "2nApoY": "Commission",
   "2QlAhE": "Commission per Unit",
   "1Lcd02": "Total Budget",
@@ -778,13 +806,24 @@
   "1voSMo": "Get more exposure and sell faster.",
   "4u4ITL": "Promote Now",
   "1uOQBZ": "How to get OGN",
+  "3lv0CZ": "Item",
+  "1LPH0L": "Quantity",
+  "VflZn": "Check In",
+  "3vWMrZ": "Check Out",
+  "7Rxil": "Shipping Address",
+  "Lr2Bk": "Total Price",
+  "198mwu": "Payment",
   "IlnwX": "Quantité",
+  "4zMr8t": "Confirm Purchase",
+  "1ykizg": "Please confirm your purchase",
+  "2EM2dq": "Confirm Purchase",
+  "3ODHrz": "Back",
   "1usuUr": "Fuseau horaire:",
   "4xvjOX": "Remarque: cela est différent de votre fuseau horaire de {userTimeZone}",
   "NF15": "Clear",
   "dyal9": "Annonce non trouvée",
+  "1qiDQm": "Listing Invalid",
   "ZOcTF": "Annonce {id}",
-  "1ucotJ": "Annonce non valide",
   "1JLB9": "Other listings by this seller",
   "OTShT": "Product Description",
   "4xrZ3E": "About the seller",
@@ -795,19 +834,25 @@
   "4gGbfA": "Approve",
   "48zmKx": "You have made an offer on this listing. Your offer will be visible within a few seconds. Your ETH payment has been transferred to an escrow contract.",
   "1uk7Ue": "View Purchase Details",
+  "2DVeBg": "Origin may now move DAI on your behalf.",
+  "4BL08O": "This field is required",
+  "3QQq80": "Shipping Address",
+  "269nk8": "Shipping Address",
+  "7UcoB": "Let the seller know where to send your item.",
+  "XcWvt": "There were some errors with your shipping address. Please fix them to continue.",
+  "3HYSoI": "Name",
+  "2CIS3U": "Street Address 1",
+  "2uzBXp": "Street Address 2",
+  "7CpuL": "City",
+  "tWWSq": "State/Province/Region",
+  "1kOB7p": "Zip/Postal Code",
+  "26AfdE": "Country",
+  "B8swo": "Other",
   "3ha47N": "Your listing here",
   "37CGq4": "Earn {=Origin Tokens}",
   "2uLTWt": "Origin Tokens",
   "3xBWhk": "From the Origin Team",
   "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Note: Recherche non disponible",
-  "zHCdD": "Categories",
-  "qNN0R": "Rewards",
-  "w9VwW": "Apparel",
-  "3KBUPq": "Gift Cards",
-  "1n8Uhq": "Housing",
-  "13f5tg": "Services",
-  "3duCHQ": "Art",
   "1tebgy": {
     "*": "{number} Annonces",
     "_1": "1 Annonce"
@@ -820,12 +865,21 @@
     "*": "{number} results",
     "_1": "1 result"
   },
-  "39Up0B": "Annonces",
   "62EcI": "Aucun résultat de recherche trouvé",
   "49IFWc": "Votre marché n'a pas encore d'annonce",
   "2Vj5Zk": "Vous pouvez créer vous-même des annonces ou inviter des vendeurs à rejoindre votre plateforme!",
   "2Qfyq": "Créer une annonce",
   "4u7nzi": "Aucune annonce trouvée",
+  "4F16NR": "Search",
+  "JcV8m": "Note: Recherche non disponible",
+  "zHCdD": "Categories",
+  "qNN0R": "Rewards",
+  "w9VwW": "Apparel",
+  "3KBUPq": "Gift Cards",
+  "1n8Uhq": "Housing",
+  "13f5tg": "Services",
+  "3duCHQ": "Art",
+  "39Up0B": "Annonces",
   "4v3q78": "Charger plus",
   "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
@@ -878,7 +932,6 @@
   "4hyWlA": "Create a Listing",
   "30cTSB": "Settings",
   "26gf1A": "Edit Listing",
-  "3ODHrz": "Back",
   "dztC6": "Purchases",
   "3ypwUq": "Listings",
   "2SCFyd": "Sales",
@@ -929,7 +982,7 @@
   "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
   "t06nL": "Messagerie d'Origin",
   "4aVWeW": "Synchronisation de la messagerie d'Origin",
-  "mmY61": "0 des 2 messages de méta-masque signés",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "La messagerie vous permettra de discuter avec d’autres acheteurs et vendeurs.",
   "1h9kqx": "En attente de votre signature du message numéro {messageNumber}",
   "tZGri": "{messageNumber} des 2 messages de méta-masque signés",
@@ -938,8 +991,10 @@
   "34wViE": "2 messages MetaMask sur 2 signés",
   "2xVe7N": "Toutes nos félicitations! Vous pouvez désormais envoyer des messages aux autres utilisateurs sur Origin et rester à jour de tous vos achats et ventes.",
   "3xbKVN": "Vous avez terminé et vous pouvez continuer en appuyant sur le bouton ci-dessous.",
+  "2MbPUC": "Continue",
   "1bjxG": "Erreur",
   "B3XI5": "Pas de Web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Activer la messagerie",
   "42zV7P": "Installer MetaMask",
   "1AkpVQ": "Installation de MetaMask ...",
@@ -958,7 +1013,6 @@
   "4zQwsK": "Add name & photo",
   "2bKSKR": "Sign to Publish",
   "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
-  "3Fn66p": "Got it",
   "3ukQa5": "Are you sure you don’t want Origin Rewards?",
   "2dbJQ2": "You will not be able to earn OGN on Origin, but you can still verify your profile.",
   "BfHYB": "I'm sure",
@@ -990,14 +1044,11 @@
   "1kXVpx": "Amount you’re willing to spend for all units sold",
   "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
   "1lrIeH": "How does it work?",
-  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
-  "2DUOxZ": "commission",
-  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
-  "41dR5i": "more exposure",
+  "hBFZk": "You can promote your listing with Origin Tokens (OGN) to get higher placement and more exposure on the Origin app and broader network.",
+  "M7K6x": "Your OGN deposit acts as a commission that will be deducted every time a sale is made. Think of this as advertising to attract more buyers to your listing.",
   "3vDb1N": "Success!",
-  "3NGsUC": "You've successfully promoted your listing.",
+  "3cZFwT": "You've successfully promoted your listing. This gives your listing higher visibility than others on the Origin app and broader network.",
   "3QQbmb": "Listing Exposure",
-  "3UjbU1": "Notifications de bureau activées",
   "gLVF0": "Réglages",
   "1lZQR5": "Réglages",
   "m1nCP": "Language",
@@ -1012,10 +1063,12 @@
   "23S1SF": "Serveur de découverte",
   "1gSlTw": "Growth Server",
   "nqaAu": "Relayer Server",
-  "2OjTbq": "Enable Proxy Accounts",
-  "1KAkeW": "Warning: enable at your own risk!",
-  "2JuXjF": "Relayer Enabled",
-  "3GHfag": "Promote Listings enabled",
+  "1kwp9A": "GraphQL Server",
+  "28zT3p": "Performance Mode",
+  "Dg7k9": "Proxy Accounts",
+  "1o6gS2": "Relayer",
+  "3T1Coy": "Onboarding Disabled",
+  "ZegcV": "Restore Defaults",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1034,15 +1087,13 @@
   "1mXtoj": "Release Funds",
   "ECVtv": "Report a Problem",
   "4mvSGz": "Congratulations!",
-  "KSCnL": "Your offer has been accepted by the seller.",
-  "3hNuzg": "{=Contact the Seller} with your shipping address or any questions.",
-  "17VPpk": "Contact the Seller",
+  "41OIow": "Seller has accepted your offer.",
   "4vbIw5": "Click below to confirm your receipt of {listingTitle} when you get it.",
   "29FBui": "{=Contact Seller} with any questions about your rental.",
   "2TlwP9": "Contact Seller",
   "Ra9eC": "Click below to confirm that your rental has been completed.",
   "1XNHon": "Click below to confirm that this service has been completed.",
-  "3fRaJs": "Confirm",
+  "1bb2m": "Confirm receipt",
   "2MmmYr": "Having issues?",
   "3hC1K6": "You've accepted this offer.",
   "4AMmgs": "Make sure to fulfill the order promptly. Message the buyer if there is any information that you need.",
@@ -1095,6 +1146,13 @@
   "innnj": "Describe your experience transacting with this buyer.",
   "1XTye3": "Write a review here",
   "2inPPl": "Submit",
+  "sZqLZ": "Enable messaging to decrypt shipping address",
+  "1cFQt5": "Could not decrypt shipping address",
+  "4aA4kx": "Name:",
+  "BQC7A": "Street Address:",
+  "3GDRNE": "City/State/Region",
+  "1W8RIH": "Country",
+  "2vag2E": "Other",
   "2QEWsR": "Y-a-t-il un problème?",
   "436v4u": "Êtes-vous sûr de vouloir signaler un problème? Cela démarrera le processus de résolution de conflit. Une personne d'origine sera avisée et l'historique de vos discussions sera rendu public par un arbitre.",
   "3N5hJ3": "Oups, attendez...",
@@ -1113,8 +1171,6 @@
   "3zjcdg": "Cancel Purchase",
   "3oTKqy": "Cancel Purchase",
   "4CzqB6": "Are you sure you want to cancel your purchase? Your escrowed payment wil be returned to your wallet.",
-  "1KdKNg": "No",
-  "TcZpT": "Yes",
   "43fCua": "Offre {id}",
   "39UKcu": "Aucun contrat de marché?",
   "4rsxzO": "Historique de transaction",
