--- a/shah/translations/it_IT.json
+++ b/shah/translations/it_IT.json
@@ -114,7 +114,7 @@
   "FajrL": "Verifica il tuo Profilo Telegram",
   "2peucP": "Crea un annuncio",
   "2QerxF": "Acquista un annuncio",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Campagna di Gennaio 2019",
     "growth.jan2019.short_name": "Gen 2019",
     "growth.feb2019.name": "Campagna di Febbraio 2019",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "Giugno 2019",
     "growth.july2019.name": "Luglio 2019 Campagna",
     "growth.july2019.short_name": "Luglio 2019",
+    "growth.aug2019.name": "Campagna di Agosto 2019",
+    "growth.aug2019.short_name": "Agosto 2019",
+    "growth.sep2019.name": "Campagna di Settembre 2019",
+    "growth.sep2019.short_name": "Settembre 2019",
     "growth.profile.and.email.requirement": "Email e profilo Origin verificati",
     "growth.two.attestations.requirement": "Due verifiche del profilo",
     "growth.profile.requirement": "Nome e foto del profilo",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "La community globale di Origin",
     "growth.twitterShare.content5.details": "Origin ha una presenza globale, con decine di migliaia di membri della comunità che supportano la nostra visione. Unisciti al nostro Telegram (ENG) oggi.",
     "growth.twitterShare.content5.link": "Leggi l'articolo",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Guarda il video",
+    "growth.share.content7.title": "Nuovi modi per guadagnare OGN a settembre",
+    "growth.share.content7.details": "Unisciti alla campagna Origin e diventa un possessore di token insieme a migliaia di utenti in tutto il mondo.",
+    "growth.share.content7.link": "Leggi l'articolo",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Leggi l'articolo",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Leggi l'articolo",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Leggi l'articolo"
   },
   "2hr27C": "Vendi un Articolo",
   "3H6hnZ": "Condividi questo su Twitter",
@@ -396,6 +415,14 @@
   "3TJ9jH": "Cryptocurrency accettate",
   "ovgii": "Maker Dai è buono per le inserzioni a lungo termine come affitti o vendite di proprietà.",
   "3JTZtf": "Ether è buono per le inserzioni a breve termine.",
+  "4oiJGX": "Abilita crittografia",
+  "2ccL5r": "Gli indirizzi di spedizione saranno crittografati in modo sicuro e saranno visibili solo a te e ai tuoi acquirenti. Per renderlo possibile, {walletType} ti chiederà di abilitare la messaggistica Origin.",
+  "2CPasx": "Caricamento...",
+  "3Fn66p": "Fatto",
+  "3LeIbr": "Richiedi l'indirizzo di spedizione",
+  "LPDmw": "Avrai bisogno dell'indirizzo di spedizione dell'acquirente per evadere l'ordine?",
+  "TcZpT": "Si",
+  "1KdKNg": "No",
   "3qpp29": "Indietro",
   "2fdHS3": "Aggiorniamo la tua inserzione",
   "1cFo8": "Crea un annuncio",
@@ -404,15 +431,14 @@
   "tjihf": "Aggiungi un annuncio",
   "2yP9GH": "Aggiungi foto",
   "sRk1G": "Gli annunci con foto avranno 5 volte più visibilità nel Marketplace Origin",
-  "2yxuOO": "{=Maximum 10 images per listing.}{=First image will be featured.}{=Recommended aspect ratio is 4:3}",
-  "IGoi0": "Massimo di 10 immagini per annuncio.",
-  "3KLh15": "La prima immagine sarà la principale.",
-  "zZpNb": "Le proporzioni consigliate sono 4: 3",
-  "39Sn4G": "{=Hold down 'command' (⌘) to select multiple images.}{=Maximum 10 images per listing.}{=First image will be featured - drag and drop images to reorder.}{=Recommended aspect ratio is 4:3}",
-  "lLyEP": "Tenere premuto \"command\" (⌘) per selezionare più immagini.",
-  "3KS9zH": "Massimo di 10 immagini per annuncio.",
-  "3IYlRb": "La prima immagine sarà quella principale - trascinare e rilasciare immagini per riordinarle.",
-  "1m5qrF": "Le proporzioni consigliate sono 4: 3",
+  "38v8Q": "{=First image will be featured}{=Recommended aspect ratio is 4:3}",
+  "4z8e4E": "La prima immagine sarà la principale",
+  "2AdhQu": "Le proporzioni consigliate sono 4: 3",
+  "MEkMJ": "{=Hold down 'command' (⌘) to select multiple images}{=First image will be featured}{=Drag and drop to reorder}{=Recommended aspect ratio is 4:3}",
+  "3TcVU5": "Tenere premuto \"command\" (⌘) per selezionare più immagini",
+  "S1k3T": "La prima immagine sarà la principale",
+  "12rgQA": "Trascina e rilascia per riordinare",
+  "3nl2LU": "Le proporzioni consigliate sono 4: 3",
   "uOODR": "Continua",
   "32PIQp": "{=Add Listing Details} Assicurati di fornire al tuo annuncio un titolo e una descrizione appropriati per far sapere agli altri cosa stai offrendo. L'aggiunta di alcune foto aumenterà le possibilità di vendere la tua inserzione.",
   "3edqPr": "Aggiungi dettagli all'inserzione",
@@ -426,7 +452,7 @@
   "2zNhcv": "Sabato",
   "3ZIa6N": "Disponibilità",
   "4nV9ke": "Si prega di correggere gli errori qui sotto...",
-  "3LuFry": "Fare clic sul calendario per inserire i prezzi e le informazioni sulla disponibilità. Per selezionare più intervalli di tempo, fai clic sullo slot temporale iniziale e trascina fino a quello finale.",
+  "jxSnv": "Fai click sul calendario per inserire i prezzi e le informazioni sulla disponibilità. Per selezionare più intervalli di tempo, fai clic sull'inizio e poi fai click sulla fine.",
   "2jTokN": "Data d'inizio",
   "3Kyim6": "Data di fine",
   "4oSoL3": "Disponibile",
@@ -446,6 +472,7 @@
   "3JSSeu": "Il fuso orario è richiesto",
   "3q86pi": "Il fuso orario è troppo lungo",
   "3DRLN5": "Fuso orario",
+  "1Q7JQv": "Fai click sul calendario per inserire i prezzi e le informazioni sulla disponibilità. Per selezionare più giorni, fai clic sull'inizio e poi fai click sulla fine.",
   "46VzsL": "Si",
   "24izZl": "No",
   "1BpZMF": "Prezzo settimanale predefinito {=(Sunday - Thursday nights)}",
@@ -513,21 +540,21 @@
   "3OynBg": "Boost è richiesto",
   "enjCs": "Boost deve essere un numero",
   "2PfKPF": "Boost deve essere zero o maggiore",
-  "IY0I8": "Congratulations",
-  "2CH3xS": "You've successfully published your listing.",
-  "3fVQoe": "View My Listing",
-  "3irw3i": "Create Another Listing",
+  "IY0I8": "Congratulazioni",
+  "2CH3xS": "Hai pubblicato con successo il tuo annuncio.",
+  "3fVQoe": "Visualizza il mio annuncio",
+  "3irw3i": "Crea un altro annuncio",
   "3BUXpv": "{=Approve OGN} Clicca sotto per approvare gli OGN per l'uso su Origin",
   "1DYydy": "Approva gli OGN",
   "1ZMsNQ": "Successo!",
-  "2DVeBg": "Origin ora può spostare DAI a vostro nome.",
+  "1AhTJM": "Origin may now move OGN on your behalf.",
   "D0geX": "Prezzo",
   "4lguwU": "Prezzo per unità",
   "3ZmGA3": "Inserire l'importo",
   "4veauv": "Il prezzo è un'approssimazione di ciò che riceverete.",
   "YOrHj": "Ulteriori informazioni",
-  "3yMQ1Q": "Quantità",
   "Seiit": "La quantità è richiesta",
+  "3yMQ1Q": "Quantità",
   "1y1wd7": "Anteprima",
   "1IkXVw": "Controlla il tuo annuncio e fai clic su Pubblica per renderlo disponibile su Origin",
   "3opilH": "Pubblica",
@@ -674,7 +701,6 @@
   "47VMoo": "Vai al sito web di Airbnb, modifica il tuo profilo ed incolla il seguente testo nella descrizione del profilo:",
   "aHvny": "Copia",
   "4ppTCb": "Continua dopo che il codice di conferma è inserito nel tuo profilo di Airbnb.",
-  "2CPasx": "Caricamento...",
   "r8uEJ": "Inserire un indirizzo email valido",
   "2v9K0Q": "Qual è il tuo indirizzo e-mail?",
   "3MWhEl": "Verifica il tuo indirizzo Email",
@@ -745,6 +771,8 @@
   "2jI1fH": "Registrare",
   "2dFweL": "Fine",
   "7piHc": "Check-out",
+  "2Vumnj": "A newer version of this listing has been published",
+  "28LlnA": "View Current Listing",
   "2nApoY": "Commissione",
   "2QlAhE": "Commissione per unità",
   "1Lcd02": "Budget totale",
@@ -778,13 +806,24 @@
   "1voSMo": "Ottieni maggiore visibilità e vendi più velocemente.",
   "4u4ITL": "Promuovi ora",
   "1uOQBZ": "Come ottenere OGN",
+  "3lv0CZ": "Articolo",
+  "1LPH0L": "Quantità",
+  "VflZn": "Check In",
+  "3vWMrZ": "Check Out",
+  "7Rxil": "Indirizzo di spedizione",
+  "Lr2Bk": "Prezzo totale",
+  "198mwu": "Pagamento",
   "IlnwX": "Quantità",
+  "4zMr8t": "Conferma l'acquisto",
+  "1ykizg": "Si prega di confermare il tuo acquisto",
+  "2EM2dq": "Conferma l'acquisto",
+  "3ODHrz": "Indietro",
   "1usuUr": "Fuso orario:",
   "4xvjOX": "NOTA: questo è diverso dal tuo fuso orario di {userTimeZone}",
   "NF15": "Chiaro",
   "dyal9": "Elenco non trovato",
+  "1qiDQm": "Annuncio non valido",
   "ZOcTF": "Elenco {id}",
-  "1ucotJ": "Elenco non valido",
   "1JLB9": "Altri annunci di questo venditore",
   "OTShT": "Descrizione del prodotto",
   "4xrZ3E": "Informazioni sul venditore",
@@ -795,19 +834,25 @@
   "4gGbfA": "Approvare",
   "48zmKx": "Hai fatto un'offerta su questo annuncio. La tua offerta sarà visibile entro pochi secondi. Il tuo pagamento in ETH è stato trasferito su un contratto di deposito a garanzia (escrow).",
   "1uk7Ue": "Visualizza i dettagli di acquisto",
+  "2DVeBg": "Origin ora può spostare DAI a vostro nome.",
+  "4BL08O": "Questo campo è obbligatorio",
+  "3QQq80": "Indirizzo di spedizione",
+  "269nk8": "Indirizzo di spedizione",
+  "7UcoB": "Let the seller know where to send your item.",
+  "XcWvt": "There were some errors with your shipping address. Please fix them to continue.",
+  "3HYSoI": "Nome",
+  "2CIS3U": "Indirizzo 1",
+  "2uzBXp": "Indirizzo 2",
+  "7CpuL": "Città",
+  "tWWSq": "Stato/Provincia/Regione",
+  "1kOB7p": "Zip/Postal Code",
+  "26AfdE": "Nazione",
+  "B8swo": "Other",
   "3ha47N": "Il tuo annuncio qui",
   "37CGq4": "Guadagna {=Origin Tokens}",
   "2uLTWt": "Token di Origin",
   "3xBWhk": "Dal team Origin",
   "4CmiKR": "Compra cose e guadagna tokens!",
-  "JcV8m": "Nota: ricerca non disponibile",
-  "zHCdD": "Categorie",
-  "qNN0R": "Ricompense",
-  "w9VwW": "Abbigliamento",
-  "3KBUPq": "Carte regalo",
-  "1n8Uhq": "Alloggio",
-  "13f5tg": "Servizi",
-  "3duCHQ": "Arte",
   "1tebgy": {
     "*": "{number} Annunci",
     "_1": "1 Annuncio"
@@ -820,12 +865,21 @@
     "*": "{number} risultati",
     "_1": "1 risultato"
   },
-  "39Up0B": "Annunci",
   "62EcI": "Nessun risultato di ricerca trovato",
   "49IFWc": "Il tuo mercato non ha ancora nessun annuncio",
   "2Vj5Zk": "Puoi creare elenchi tu stesso o invitare venditori ad aderire alla tua piattaforma!",
   "2Qfyq": "Crea un annuncio",
   "4u7nzi": "Nessun annuncio trovato",
+  "4F16NR": "Ricerca",
+  "JcV8m": "Nota: ricerca non disponibile",
+  "zHCdD": "Categorie",
+  "qNN0R": "Ricompense",
+  "w9VwW": "Abbigliamento",
+  "3KBUPq": "Carte regalo",
+  "1n8Uhq": "Alloggio",
+  "13f5tg": "Servizi",
+  "3duCHQ": "Arte",
+  "39Up0B": "Annunci",
   "4v3q78": "Carica di più",
   "4pf0yW": "Featured",
   "3Ul6WQ": "Prezzo: dal basso all'alto",
@@ -878,7 +932,6 @@
   "4hyWlA": "Crea un annuncio",
   "30cTSB": "Impostazioni",
   "26gf1A": "Modifica inserzione",
-  "3ODHrz": "Indietro",
   "dztC6": "Acquisti",
   "3ypwUq": "Annunci",
   "2SCFyd": "Saldi",
@@ -929,7 +982,7 @@
   "4B7lnl": "Crea un profilo di base in modo che altri possano sapere chi sei nel Marketplace di Origin.",
   "t06nL": "Messaggistica Origin",
   "4aVWeW": "Origin Synaging Syncing",
-  "mmY61": "0 di 2 messaggi MetaMask firmati",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "La messaggistica ti consentirà di chattare con altri acquirenti e venditori.",
   "1h9kqx": "In attesa che tu firmi il messaggio numero {messageNumber}",
   "tZGri": "{messageNumber} di 2 messaggi MetaMask firmati",
@@ -938,8 +991,10 @@
   "34wViE": "2 di 2 messaggi MetaMask firmati",
   "2xVe7N": "Congratulazioni! Ora puoi inviare messaggi ad altri utenti su Origin e rimanere aggiornato su tutti i tuoi acquisti e vendite.",
   "3xbKVN": "Hai finito e puoi continuare premendo il pulsante qui sotto.",
+  "2MbPUC": "Continua",
   "1bjxG": "Errore",
   "B3XI5": "No Web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Abilita la messaggistica",
   "42zV7P": "Installa MetaMask",
   "1AkpVQ": "Installare MetaMask ...",
@@ -958,7 +1013,6 @@
   "4zQwsK": "Aggiungi nome e foto",
   "2bKSKR": "Iscriviti per pubblicare",
   "vGI2a": "{walletType} ti chiederà ora di firmare i dati di creazione del tuo profilo.",
-  "3Fn66p": "Fatto",
   "3ukQa5": "Sei sicuro di non volere Premi Origin?",
   "2dbJQ2": "Non sarai in grado di guadagnare OGN su Origin, ma puoi comunque verificare il tuo profilo.",
   "BfHYB": "Sono sicuro",
@@ -972,7 +1026,7 @@
   "XaD4D": "Disponibile per {browser}",
   "29RrPk": "Connetti MetaMask",
   "1AQgmT": "Aprendo la App...",
-  "4iVrWM": "Loading",
+  "4iVrWM": "Caricamento",
   "4apdzo": "Promuovi adesso",
   "1o5hKC": "Per favore specifica un valore per la commissione",
   "2IWJV3": "Non abbastanza OGN",
@@ -990,14 +1044,11 @@
   "1kXVpx": "Importo che sei disposto a spendere per tutte le unità vendute",
   "2luPDv": "Commissione totale richiesta per vendere {unitsAvailable} unità: {totalCommission} OGN",
   "1lrIeH": "Come funziona?",
-  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
-  "2DUOxZ": "commission",
-  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
-  "41dR5i": "more exposure",
+  "hBFZk": "You can promote your listing with Origin Tokens (OGN) to get higher placement and more exposure on the Origin app and broader network.",
+  "M7K6x": "Your OGN deposit acts as a commission that will be deducted every time a sale is made. Think of this as advertising to attract more buyers to your listing.",
   "3vDb1N": "Success!",
-  "3NGsUC": "You've successfully promoted your listing.",
+  "3cZFwT": "You've successfully promoted your listing. This gives your listing higher visibility than others on the Origin app and broader network.",
   "3QQbmb": "Listing Exposure",
-  "3UjbU1": "Notifiche del desktop abilitate ✅",
   "gLVF0": "impostazioni",
   "1lZQR5": "impostazioni",
   "m1nCP": "Lingua",
@@ -1012,10 +1063,12 @@
   "23S1SF": "Discovery Server",
   "1gSlTw": "Growth Server",
   "nqaAu": "Server Relayer",
-  "2OjTbq": "Abilita account proxy",
-  "1KAkeW": "Avvertenza: abilitare a proprio rischio!",
-  "2JuXjF": "Relayer abilitato",
-  "3GHfag": "Promozione annunci abilitata",
+  "1kwp9A": "Server GraphQL",
+  "28zT3p": "Performance Mode",
+  "Dg7k9": "Account proxy",
+  "1o6gS2": "Relayer",
+  "3T1Coy": "Onboarding Disabled",
+  "ZegcV": "Restore Defaults",
   "pT9j": "Trattenuto",
   "NrhOS": "Rilasciato",
   "QUO1v": "Importo",
@@ -1034,15 +1087,13 @@
   "1mXtoj": "Rilascia i fondi",
   "ECVtv": "Segnala un problema",
   "4mvSGz": "Congratulazioni!",
-  "KSCnL": "La tua offerta è stata accettata dal venditore.",
-  "3hNuzg": "{=Contact the Seller} con il tuo indirizzo di spedizione o eventuali domande.",
-  "17VPpk": "Contattare il venditore",
+  "41OIow": "Il venditore ha accettato la tua offerta.",
   "4vbIw5": "Clicca qui sotto per confermare la ricevuta di {listingTitle} quando lo ottieni.",
   "29FBui": "{=Contact Seller} con eventuali domande sul tuo noleggio.",
   "2TlwP9": "Contatta il venditore",
   "Ra9eC": "Clicca qui sotto per confermare che il tuo noleggio è stato completato.",
   "1XNHon": "Clicca sotto per confermare che questo servizio è stato completato.",
-  "3fRaJs": "Conferma",
+  "1bb2m": "Conferma ricevuta",
   "2MmmYr": "Hai problemi?",
   "3hC1K6": "Hai accettato questa offerta.",
   "4AMmgs": "Assicurati di soddisfare l'ordine tempestivamente. Manda un messaggio al compratore se ci sono informazioni di cui hai bisogno.",
@@ -1095,6 +1146,13 @@
   "innnj": "Descrivi la tua esperienza di transazione con questo acquirente.",
   "1XTye3": "Scrivi una recensione qui",
   "2inPPl": "Invia",
+  "sZqLZ": "Abilita la messaggistica per decrittografare l'indirizzo di spedizione",
+  "1cFQt5": "Impossibile decrittografare l'indirizzo di spedizione",
+  "4aA4kx": "Nome:",
+  "BQC7A": "Indirizzo:",
+  "3GDRNE": "Città/Stato/Regione",
+  "1W8RIH": "Nazione",
+  "2vag2E": "Other",
   "2QEWsR": "C'è qualche problema?",
   "436v4u": "Sei sicuro di voler segnalare un problema? Questo avvierà la procedura di risoluzione dei conflitti. Verranno avvisati tutti gli utenti di Origin e la cronologia della chat verrà resa pubblica a un arbitro.",
   "3N5hJ3": "Oops, no aspetta...",
@@ -1113,8 +1171,6 @@
   "3zjcdg": "Cancella l'aquisto",
   "3oTKqy": "Cancella l'aquisto",
   "4CzqB6": "Sei sicuro di voler ritirare la tua offerta? Il tuo pagamento in garanzia verrà restituito al tuo portafoglio.",
-  "1KdKNg": "No",
-  "TcZpT": "Si",
   "43fCua": "Offerta {id}",
   "39UKcu": "Nessun contratto di mercato?",
   "4rsxzO": "Cronologia delle transazioni",
