--- a/shah/translations/ja_JP.json
+++ b/shah/translations/ja_JP.json
@@ -114,7 +114,7 @@
   "FajrL": "Tekegramのプロフィールを認証してください。",
   "2peucP": "掲載情報を作成する。",
   "2QerxF": "購入する",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "2019年1月キャンペーン",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月キャンペーン",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "2019年6月",
     "growth.july2019.name": "2019年7月キャンペーン",
     "growth.july2019.short_name": "2019年7月",
+    "growth.aug2019.name": "2019年8月キャンペーン",
+    "growth.aug2019.short_name": "2019年8月",
+    "growth.sep2019.name": "2019年9月キャンペーン",
+    "growth.sep2019.short_name": "2019年9月",
     "growth.profile.and.email.requirement": "確認済みのメールアドレスとOriginのプロフィール",
     "growth.two.attestations.requirement": "２つのプロフィール認証",
     "growth.profile.requirement": "プロフィール名と写真",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Originグローバルコミュニティ",
     "growth.twitterShare.content5.details": "Originには世界中にユーザーが存在し、何万人ものコミュニティメンバーがチームとビジョンを共有しています。あなたも、今すぐTelegram（英語）に参加ください！",
     "growth.twitterShare.content5.link": "記事を読む",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "Youtube創設者がOriginの強みを語る！",
+    "growth.share.content6.details": "Youtubeの共同創設者であるSteve Chen氏が、Originの強みについて語りました。",
+    "growth.share.content6.link": "動画を見る",
+    "growth.share.content7.title": "OGNを獲得するための新しい方法（９月）",
+    "growth.share.content7.details": "Origin Rewardsに参加して、世界中のユーザーと一緒にトークンホルダーになりましょう！",
+    "growth.share.content7.link": "記事を読む",
+    "growth.share.content8.title": "OriginがBlockfolioに追加されました！",
+    "growth.share.content8.details": "OriginをBlockfolioでフォローして、Originコアチームからの最新情報をゲットしましょう！",
+    "growth.share.content8.link": "記事を読む",
+    "growth.share.content9.title": "Originチームに参加してOGNをゲットしよう！",
+    "growth.share.content9.details": "テレグラムでOriginをフォローしてOriginトークンをゲットしよう！",
+    "growth.share.content9.link": "記事を読む",
+    "growth.share.content10.title": "ベネズエラの分散型商業システム",
+    "growth.share.content10.details": "ブロックチェーンを活用したマーケットに、安価なスマホを通じて20億人の銀行口座のない人たちがアクセスできるようになります。",
+    "growth.share.content10.link": "記事を読む"
   },
   "2hr27C": "販売する",
   "3H6hnZ": "これをTwitterで共有する",
@@ -396,6 +415,14 @@
   "3TJ9jH": "支払いに対応している暗号通貨",
   "ovgii": "Maker Daiは、レンタルや不動産販売などの長期の出品に適しています。",
   "3JTZtf": "Ethereumは短期間の出品に適しています。",
+  "4oiJGX": "Enable Encryption",
+  "2ccL5r": "Shipping addresses will be securely encrypted and visible only to you and your buyers. To make this possible, {walletType} will ask you to enable Origin Messaging.",
+  "2CPasx": "読込中...",
+  "3Fn66p": "了解！",
+  "3LeIbr": "Require Shipping Address",
+  "LPDmw": "Will you need the buyer's shipping address to fulfill the order?",
+  "TcZpT": "はい",
+  "1KdKNg": "いいえ",
   "3qpp29": "戻る",
   "2fdHS3": "出品情報を更新しましょう",
   "1cFo8": "出品情報を作成する。",
@@ -404,15 +431,14 @@
   "tjihf": "出品情報を掲載する",
   "2yP9GH": "写真を追加",
   "sRk1G": "写真付きの出品情報は、写真の無いものと比べて約5倍多くマーケットプレイス内で表示されます。",
-  "2yxuOO": "{=Maximum 10 images per listing.}{=First image will be featured.}{=Recommended aspect ratio is 4:3}",
-  "IGoi0": "出品情報には最大10枚の画像が使用できます。",
-  "3KLh15": "最初の画像が表示されます",
-  "zZpNb": "画像の縦横比は4：３を推奨します。",
-  "39Sn4G": "{=Hold down 'command' (⌘) to select multiple images.}{=Maximum 10 images per listing.}{=First image will be featured - drag and drop images to reorder.}{=Recommended aspect ratio is 4:3}",
-  "lLyEP": "「コマンド」（⌘）を押しながら複数の画像を選択できます。",
-  "3KS9zH": "出品情報には最大10枚の画像が使用できます。",
-  "3IYlRb": "最初の画像がサムネイルとして表示されます。画像をドラッグアンドドロップで並べ替えてください。",
-  "1m5qrF": "画像の縦横比は4：３を推奨します。",
+  "38v8Q": "{=First image will be featured}{=Recommended aspect ratio is 4:3}",
+  "4z8e4E": "最初の画像が表示されます",
+  "2AdhQu": "画像の縦横比は4：３を推奨します。",
+  "MEkMJ": "{=Hold down 'command' (⌘) to select multiple images}{=First image will be featured}{=Drag and drop to reorder}{=Recommended aspect ratio is 4:3}",
+  "3TcVU5": "「コマンド」（⌘）を押しながら複数の画像を選択できます。",
+  "S1k3T": "最初の画像が表示されます",
+  "12rgQA": "ドラッグアンドドロップで順番を変更できます。",
+  "3nl2LU": "画像の縦横比は4：３を推奨します。",
   "uOODR": "続ける",
   "32PIQp": "{=Add Listing Details} 他の人があなたが提供しているものを知らせるためにあなたのリストに適切なタイトルと説明を与えるようにしてください。いくつかの写真を追加すると、あなたの出品を販売する可能性が高まります。",
   "3edqPr": "出品情報の詳細を追加する",
@@ -426,7 +452,7 @@
   "2zNhcv": "土曜日",
   "3ZIa6N": "空き状況",
   "4nV9ke": "以下のエラーを修正してください...",
-  "3LuFry": "カレンダーをクリックして、価格と在庫情報を入力します。複数のタイムスロットを選択するには、開始タイムスロットをクリックして終了タイムスロットまでドラッグします。",
+  "jxSnv": "カレンダーをクリックして、空き状況や価格を確認してください。複数の時間を選択する場合は、開始時間をクリックしてから終了時間をクリックしてください。",
   "2jTokN": "開始日",
   "3Kyim6": "終了日",
   "4oSoL3": "利用可能",
@@ -446,6 +472,7 @@
   "3JSSeu": "タイムゾーンが必要です",
   "3q86pi": "タイムゾーンが長すぎます",
   "3DRLN5": "タイムゾーン",
+  "1Q7JQv": "カレンダーをクリックして、空き状況や価格を確認してください。複数の時間を選択する場合は、開始日をクリックしてから終了日をクリックしてください。",
   "46VzsL": "はい",
   "24izZl": "いいえ",
   "1BpZMF": "通常の平日価格 {=(Sunday - Thursday nights)}",
@@ -520,14 +547,14 @@
   "3BUXpv": "{=Approve OGN} OriginでOGNを使うには、下記をクリックして認証を行ってください。",
   "1DYydy": "OGNを認証する",
   "1ZMsNQ": "成功!",
-  "2DVeBg": "OriginがあなたのDAIを動かす事ができるようになりました。",
+  "1AhTJM": "Origin may now move OGN on your behalf.",
   "D0geX": "価格",
   "4lguwU": "価格（1ユニットあたり）",
   "3ZmGA3": "金額を入力",
   "4veauv": "価格はあなたが受け取る額の概算です",
   "YOrHj": "詳細について",
-  "3yMQ1Q": "数量",
   "Seiit": "数量が必要です",
+  "3yMQ1Q": "数量",
   "1y1wd7": "レビュー",
   "1IkXVw": "あなたのレビューを確認し、OkであればPublishをクリックしてください。Origin上で閲覧可能になります。",
   "3opilH": "公開する",
@@ -674,7 +701,6 @@
   "47VMoo": "Airbnbのサイトへ行き、あなたのプロフィールを編集した後、下記のテキストをプロフィールの説明にコピー＆ペーストしてください。",
   "aHvny": "コピーする",
   "4ppTCb": "あなたのAirbnbのプロフィールが認証されてから、続きの作業を行ってください。",
-  "2CPasx": "読込中...",
   "r8uEJ": "有効なEメールアドレスを入力してください。",
   "2v9K0Q": "メールアドレスを教えてください",
   "3MWhEl": "あなたのメールアドレスを確認してください",
@@ -745,6 +771,8 @@
   "2jI1fH": "チェックイン",
   "2dFweL": "終了",
   "7piHc": "チェックアウト",
+  "2Vumnj": "A newer version of this listing has been published",
+  "28LlnA": "View Current Listing",
   "2nApoY": "手数料",
   "2QlAhE": "単位あたりのコミッション",
   "1Lcd02": "予算",
@@ -778,13 +806,24 @@
   "1voSMo": "掲載回数を増やして売れやすくする",
   "4u4ITL": "プロモーションしましょう",
   "1uOQBZ": "OGNを入手するには",
+  "3lv0CZ": "Item",
+  "1LPH0L": "Quantity",
+  "VflZn": "Check In",
+  "3vWMrZ": "Check Out",
+  "7Rxil": "Shipping Address",
+  "Lr2Bk": "Total Price",
+  "198mwu": "Payment",
   "IlnwX": "数量",
+  "4zMr8t": "Confirm Purchase",
+  "1ykizg": "Please confirm your purchase",
+  "2EM2dq": "Confirm Purchase",
+  "3ODHrz": "戻る",
   "1usuUr": "タイムゾーン:",
   "4xvjOX": "注：これは {userTimeZone}タイムゾーンとは異なります",
   "NF15": "削除",
   "dyal9": "リストが見つかりません",
+  "1qiDQm": "出品情報が無効です",
   "ZOcTF": "リスト {id}",
-  "1ucotJ": "リストが無効です",
   "1JLB9": "この販売者の出品情報",
   "OTShT": "製品説明",
   "4xrZ3E": "販売者について",
@@ -795,19 +834,25 @@
   "4gGbfA": "承認する",
   "48zmKx": "この出品情報にオファーを送りました。オファーは数秒以内に表示されます。 ETHでのお支払いがエスクローに移行されました。",
   "1uk7Ue": "購入の詳細を見る",
+  "2DVeBg": "OriginがあなたのDAIを動かす事ができるようになりました。",
+  "4BL08O": "This field is required",
+  "3QQq80": "Shipping Address",
+  "269nk8": "Shipping Address",
+  "7UcoB": "Let the seller know where to send your item.",
+  "XcWvt": "There were some errors with your shipping address. Please fix them to continue.",
+  "3HYSoI": "Name",
+  "2CIS3U": "Street Address 1",
+  "2uzBXp": "Street Address 2",
+  "7CpuL": "City",
+  "tWWSq": "State/Province/Region",
+  "1kOB7p": "Zip/Postal Code",
+  "26AfdE": "Country",
+  "B8swo": "Other",
   "3ha47N": "あなたの出品情報",
   "37CGq4": "{=Origin Tokens} を獲得できます",
   "2uLTWt": "Originトークン",
   "3xBWhk": "Originチームから",
   "4CmiKR": "買い物してトークンをゲット！",
-  "JcV8m": "注：検索は利用できません",
-  "zHCdD": "カテゴリー",
-  "qNN0R": "報酬",
-  "w9VwW": "アパレル",
-  "3KBUPq": "ギフトカード",
-  "1n8Uhq": "住宅",
-  "13f5tg": "サービス",
-  "3duCHQ": "アート",
   "1tebgy": {
     "*": "{number} 出品情報",
     "_1": "１ 出品情報"
@@ -820,17 +865,26 @@
     "*": "{number} 結果",
     "_1": "１件"
   },
-  "39Up0B": "出品情報",
   "62EcI": "検索結果がありません。",
   "49IFWc": "まだ出品情報が作成、および公開されていません。",
   "2Vj5Zk": "あなた自身で掲載情報を作成したり、販売したい人をプラットフォームに招待したりできます。",
   "2Qfyq": "掲載情報を作成する。",
   "4u7nzi": "出品情報が見つかりません",
+  "4F16NR": "検索",
+  "JcV8m": "注：検索は利用できません",
+  "zHCdD": "カテゴリー",
+  "qNN0R": "報酬",
+  "w9VwW": "アパレル",
+  "3KBUPq": "ギフトカード",
+  "1n8Uhq": "住宅",
+  "13f5tg": "サービス",
+  "3duCHQ": "アート",
+  "39Up0B": "出品情報",
   "4v3q78": "もっと読み込む",
-  "4pf0yW": "Featured",
+  "4pf0yW": "特集",
   "3Ul6WQ": "価格：低→高",
   "1rioH9": "価格：高→低",
-  "qqmM": "Sort",
+  "qqmM": "ソート",
   "114jZK": "ソート",
   "2XkwlS": "メッセージを照会できません",
   "333iq2": "会話はありません！",
@@ -878,7 +932,6 @@
   "4hyWlA": "出品情報を作成する。",
   "30cTSB": "設定",
   "26gf1A": "出品情報を編集する",
-  "3ODHrz": "戻る",
   "dztC6": "購入",
   "3ypwUq": "出品情報",
   "2SCFyd": "販売",
@@ -929,7 +982,7 @@
   "4B7lnl": "Origin マーケットプレイスで公開する、基本的なプロファイルを作成します。",
   "t06nL": "Originメッセージ機能",
   "4aVWeW": "オリジンメッセージングの同期",
-  "mmY61": "0/2メタマスクメッセージが署名されている",
+  "1Nq45C": "{messageNumber} ２つのMetaMaskメッセージが署名されました",
   "3bcmm4": "メッセージングを使用すると、他の購入者や販売者とチャットすることができます。",
   "1h9kqx": "あなたがメッセージ番号 {messageNumber}に署名するのを待っています",
   "tZGri": "{messageNumber} 2つのMetaMaskメッセージの署名されました",
@@ -938,8 +991,10 @@
   "34wViE": "2の2 MetaMaskメッセージが署名した",
   "2xVe7N": "おめでとうございます。 Originのユーザーへメッセージを送る事ができるようになりました。取引に関する情報も最新にキープされます。",
   "3xbKVN": "下のボタンを押すと完了です。",
+  "2MbPUC": "続ける",
   "1bjxG": "エラー",
   "B3XI5": "Web3なし",
+  "3SotHT": "エラーが起きました",
   "1LEF7E": "メッセージ機能を有効にする",
   "42zV7P": "MetaMaskをインストールしてください",
   "1AkpVQ": "MetaMaskをインストールしています...",
@@ -958,7 +1013,6 @@
   "4zQwsK": "名前と写真を追加",
   "2bKSKR": "署名し公開する",
   "vGI2a": "{walletType} は作成されたプロファイルデータへの署名を求めています",
-  "3Fn66p": "了解！",
   "3ukQa5": "Origin からの報酬は不要ですか？",
   "2dbJQ2": "OriginでOGNを獲得することはできませんが、プロフィールを確認することはできます。",
   "BfHYB": "はい、了解です",
@@ -972,7 +1026,7 @@
   "XaD4D": "{browser}利用可能",
   "29RrPk": "MetaMaskを接続する",
   "1AQgmT": "アプリを開いています…",
-  "4iVrWM": "Loading",
+  "4iVrWM": "読込中",
   "4apdzo": "プロモーションしましょう",
   "1o5hKC": "手数料を入力してください。",
   "2IWJV3": "OGNが不足しています。",
@@ -990,14 +1044,11 @@
   "1kXVpx": "完売までの予算",
   "2luPDv": "完売するまでに必要なOGN。{unitsAvailable} 個: {totalCommission} OGN",
   "1lrIeH": "どのように機能しますか？",
-  "vXDfP": "OGNを使って、自分の出品情報をプロモーションできます。OGNは {=commission} のようなもので、販売が行われると手数料として徴収されます。",
-  "2DUOxZ": "手数料",
-  "23CyCf": "こうすることで、あはなたの出品情報はOriginネットワーク上で、目立つように表示されます。{=more exposure}",
-  "41dR5i": "目立つように表示する",
+  "hBFZk": "You can promote your listing with Origin Tokens (OGN) to get higher placement and more exposure on the Origin app and broader network.",
+  "M7K6x": "Your OGN deposit acts as a commission that will be deducted every time a sale is made. Think of this as advertising to attract more buyers to your listing.",
   "3vDb1N": "成功!",
-  "3NGsUC": "出品情報が正しくプロモーションされました。",
+  "3cZFwT": "You've successfully promoted your listing. This gives your listing higher visibility than others on the Origin app and broader network.",
   "3QQbmb": "出品情報の表示頻度",
-  "3UjbU1": "デスクトップ通知を有効にする✅",
   "gLVF0": "設定",
   "1lZQR5": "設定",
   "m1nCP": "言語",
@@ -1012,10 +1063,12 @@
   "23S1SF": "検出サーバー",
   "1gSlTw": "Growth サーバー",
   "nqaAu": "Relayer サーバー",
-  "2OjTbq": "プロキシアカウントを有効にする",
-  "1KAkeW": "警告：自己責任で有効にしてください！",
-  "2JuXjF": "Relayer 有効",
-  "3GHfag": "出品情報のプロモーションが可能です",
+  "1kwp9A": "GraphQL サーバー",
+  "28zT3p": "パフォーマンスモード",
+  "Dg7k9": "プロキシアカウント",
+  "1o6gS2": "リレーヤー",
+  "3T1Coy": "オンボード使用不可",
+  "ZegcV": "初期化",
   "pT9j": "開催",
   "NrhOS": "発売日",
   "QUO1v": "量",
@@ -1034,15 +1087,13 @@
   "1mXtoj": "資金をリリースする",
   "ECVtv": "問題を報告する",
   "4mvSGz": "おめでとうございます!",
-  "KSCnL": "販売者があなたのオファーを受諾しました",
-  "3hNuzg": "{=Contact the Seller} 配送先住所、または質問",
-  "17VPpk": "販売者に連絡する",
+  "41OIow": "Seller has accepted your offer.",
   "4vbIw5": "{listingTitle} 品物を受け取ったら、こちらをクリックして領収書を確認してください。",
   "29FBui": "{=Contact Seller} レンタルに関するご質問。",
   "2TlwP9": "販売者に連絡する",
   "Ra9eC": "こちらをクリックして、レンタルの完了処理を行ってください。",
   "1XNHon": "こちらをクリックして、サービスの完了処理を行ってください。",
-  "3fRaJs": "確認する",
+  "1bb2m": "Confirm receipt",
   "2MmmYr": "問題がありますか？",
   "3hC1K6": "オファーを受諾しました。",
   "4AMmgs": "注文はすぐに履行してください。必要な場合は、買い手にメッセージを送っることもできます。",
@@ -1095,6 +1146,13 @@
   "innnj": "この購入者との取引について、感想を記入ください。",
   "1XTye3": "ここにレビューを書く",
   "2inPPl": "送信",
+  "sZqLZ": "Enable messaging to decrypt shipping address",
+  "1cFQt5": "Could not decrypt shipping address",
+  "4aA4kx": "Name:",
+  "BQC7A": "Street Address:",
+  "3GDRNE": "City/State/Region",
+  "1W8RIH": "Country",
+  "2vag2E": "Other",
   "2QEWsR": "問題がありますか？",
   "436v4u": "問題を報告してよろしいですか？これにより、競合解決プロセスが開始されます。 Originの誰かに通知され、あなたのチャット履歴は仲裁人に公開されます。",
   "3N5hJ3": "あ、ちょっと待って...",
@@ -1113,8 +1171,6 @@
   "3zjcdg": "購入をキャンセル",
   "3oTKqy": "購入をキャンセル",
   "4CzqB6": "購入を取り消してもよろしいですか？エスクローされた支払いはあなたのウォレットに返却されます。",
-  "1KdKNg": "いいえ",
-  "TcZpT": "はい",
   "43fCua": "オファー {id}",
   "39UKcu": "市場での契約はありませんか？",
   "4rsxzO": "トランザクション履歴",
